--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,11 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.github.bumptech.glide:glide:4.6.1'
     implementation 'com.jakewharton:butterknife:8.8.1'
+    implementation 'com.facebook.android:facebook-android-sdk:4.32.0'
+    implementation 'com.facebook.android:facebook-core:4.32.0'
+    implementation 'com.facebook.android:facebook-login:4.32.0'
+    implementation 'com.facebook.android:facebook-share:4.32.0'
+    implementation 'com.facebook.android:facebook-places:4.32.0'
+    implementation 'com.facebook.android:facebook-messenger:4.32.0'
+    implementation 'com.facebook.android:facebook-applinks:4.32.0'
 }
