--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,9 +6,9 @@ android {
         applicationId "com.mediaanda.southsumatera"
         minSdkVersion 15
         targetSdkVersion 27
-        versionCode 1
-        versionName "1.0"
+        versionName '1.0'
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        versionCode 2
     }
     buildTypes {
         release {
@@ -17,6 +17,8 @@ android {
         }
     }
     sourceSets { main { resources.srcDirs = ['src/main/resources', 'src/main/resources/'] } }
+    productFlavors {
+    }
 }
 
 dependencies {
