--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,9 +6,9 @@ android {
         applicationId "com.mediaanda.southsumatera"
         minSdkVersion 15
         targetSdkVersion 27
-        versionName '1.0'
+        versionName '1.3'
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        versionCode 2
+        versionCode 3
     }
     buildTypes {
         release {
@@ -41,4 +41,5 @@ dependencies {
     implementation 'com.facebook.android:facebook-places:4.32.0'
     implementation 'com.facebook.android:facebook-messenger:4.32.0'
     implementation 'com.facebook.android:facebook-applinks:4.32.0'
+    implementation 'com.nightonke:boommenu:2.1.1'
 }
